test_src/compiler_errors/types/binary/UnsignedRightShiftBoolError4.b
class UnsignedRightShiftBoolError4 {
    void test() {
        Bool value = true;
        println(value >>>= 6);
    }
}
